--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#0C5B82</color>
 
     <color name="white">#fff</color>
+    <color name="mustard">#e1ad01</color>
 </resources>
