--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,8 @@
             android:layout_height="50dp"
             android:layout_margin="32dp"
             android:src="@drawable/rectanglebutton"
-            android:layout_gravity="center_vertical" />
+            android:layout_gravity="center_vertical"
+            android:onClick="capture"/>
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
