--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -43,12 +43,14 @@
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_margin="8dp"
-            android:src="@drawable/circlebutton" />
+            android:src="@drawable/circlebutton"
+            android:onClick="speak"/>
         <TextView
             android:id="@+id/t_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"/>
+            android:visibility="gone"
+            android:text="hello"/>
     </LinearLayout>
 
 </LinearLayout>
