--- a/app/src/main/res/drawable/circlebutton.xml
+++ b/app/src/main/res/drawable/circlebutton.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="false">
         <shape android:shape="oval">
-            <solid android:color="@color/mustard"/>
+            <solid android:color="@color/mustard" />
+            <padding android:top="120dp"
+                android:bottom="120dp"
+                android:left="120dp"
+                android:right="120dp"/>
         </shape>
     </item>
-</selector>
+    <item>
+        <bitmap android:src="@drawable/tempmic"
+            android:gravity="center"/>
+    </item>
+</layer-list>
