--- a/app/src/main/res/drawable/rectanglebutton.xml
+++ b/app/src/main/res/drawable/rectanglebutton.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
-    android:shape="rectangle">
-    <solid android:color="@color/mustard"/>
-    <corners android:radius="8dp"/>
-</shape>
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android">
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="@color/mustard"/>
+            <corners android:radius="8dp"/>
+            <padding android:right="16dp"
+                android:left="16dp"
+                android:top="8dp"
+                android:bottom="8dp"/>
+        </shape>
+    </item>
+    <item>
+        <bitmap android:src="@drawable/camera"/>
+    </item>
+</layer-list>
